consolidate ItemDetailFragment and ItemDetailActivity (who needs 2 pane layouts) and create more full layout for it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,7 @@
 
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="pick_expiration_date">Set Expiration Date</string>
+
 
 </resources>
