--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="pick_expiration_date">Set Expiration Date</string>
 
     <string name="title_activity_expiration_setting">ExpirationSettingActivity</string>
+    <string name="image_processing_msg">please wait - processing image</string>
 
 
 </resources>
