--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
 
     <string name="title_activity_expiration_setting">ExpirationSettingActivity</string>
     <string name="image_processing_msg">please wait - processing image</string>
+    <string name="channel_name">expiration</string>
+    <string name="channel_description">Notifications for expiring items</string>
 
 
 </resources>
